2003-11-08  Michael Yount <csf@moscow.com>

        * lib/Mj/MailOut.pm:  (welcome)  Increase the message count
        only if a welcome file has already been processed.
        Thanks to Roger Klorese.

2003-11-04  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  Version number is now 0.1200311040.
	(_createlist)  Pass the domain name to the shell hook.

	* lib/Mj/BounceHandler.pm:  (_hbr_noprobe)  Pass the
	domain, list, and user to the shell hook.

	* lib/Mj/Resend.pm:  (_r_strip_body)  Add missing ops
	for perl 5.8.1 compatibility.  Warn if an error occurs
	in the filtering code.

2003-11-03  Michael Yount <csf@moscow.com>

	* setup/install_util.pl:  (copy_file)  If a link was requested
	and the Mj2 and CGI directories occupy different partitions,
	use a symbolic link.
	Thanks to Eric Sorenson.

2003-11-02  Michael Yount <csf@moscow.com>

	* lib/Mj/Addr.pm:  (_xform)  Add safe ops for perl 5.8.1
	compatability.

	* lib/Mj/Resend.pm:  (_check_header, _check_body, _r_strip_body)
	Add safe ops for perl 5.8.1 compatibility.

	* lib/Mj/Util.pm:  (process_rule, re_match)  Add safe ops
	for perl 5.8.1 compatibility.
	Thanks to Brock Rozen.

2003-11-01  Michael Yount <csf@moscow.com>

	* Makefile.PL:  Compensate for changes in the MakeMaker
	installbin routine.  Thanks to Devin Reade.

2003-10-29  Michael Yount <csf@moscow.com>

	* lib/Mj/MIMEParser.pm:  (parse_open)  Bugfix:  Call
	parse_in() instead of parse_open() as needed to allow
	Mj2 to work with MIME::Tools version 4 again.

	* lib/Mj/Resend.pm:  (_r_ck_header)  Bugfix:  Initialize
	the dup_msg_id access variable correctly to avoid 
	tickling the tainting bug in perl 5.5 and earlier versions.

2003-10-28  Michael Yount <csf@moscow.com>

	* bin/mj_enqueue:  Cope better with empty messages.
	Thanks to SRE.

	* lib/Mj/BounceHandler.pm:  Rewrite to use messages
	instead of hard-coded English.
	(handle_bounce_message)  Compensate for truncated VERP
	addresses.  Thanks to Jeff Wasilko.
